      option.
   -- Fixed a bug where the game editor could give out disabled items.
   -- Fixed a bug in the game editor to mark a unit as having owned an item.
   -- Fixed a bug in the save code which caused items to be shown every turn
      instead of just the first turn
   -- Fixed where FORCE_SHIELD versus ranged attacks got broken in the
      rewrite of the combat system.
   -- Fixed bug.  A unit with wolves/eagles/dragons which LOST the
      ability to control them (either via having the mage assassinated or
      via the mage FORGETing the skill) now loses the creatures.
   -- Added ability to control a factions starting location and whether or
      no the 'traditional' starting unit is created to the players.in file.
   -- Added more objects and stuff for Ceran
   -- Fixed bug which allowed two guard units to spring up in a city.
   -- Fixed problems with fileio.cpp on win32
   -- RE-FIXED bug with city guards
   -- Fixed a bug where a disabled item/skill/object was still be accepted
      by the checker.
   -- Applied modified version of maximum mages per building patch submitted
      by Paul Mehrer <paul.mehrer@web.de>
   -- Fixed a bug in the EASIER_UNDERWORLD code pointed out by
      Stephen Baillie (baillie@cs.mu.oz.au) which caused it to only work on
      level 0-2 inclusive.
   -- Fixed a bug in IMPROVED_FARSIGHT code which was pointed out by Stephen
      Baillie (baillie@cs.mu.oz.au) which caused it give odd results if
      multiple mages from the same faction with different skills cast farsight
      on the same hex during a turn.
   -- Fixed bug in BUILD HELP which caused an infinite loop when the helper
      was already in the building to be helped with.
   -- Fixed bug in NOSPOILS code which caused an infinite loop if no army
      unit would accept spoils.
   -- Fixed another bug in the NOSPOILS code.  NOSPOILS was supposed to still
      allow 0 weight and weight < walking capacity items to be aquired.  It
      wasn't.